--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,15 +10,22 @@
     <link rel="stylesheet" href="./Style.css">
 
     <!-- link icons  -->
+    <script src="https://kit.fontawesome.com/59784df54a.js" crossorigin="anonymous"></script>
 
     <title>Show Hide Password</title>
 </head>
+
 <body>
     <div class="container">
         <div class="input-box">
             <input type="password" name="password" placeholder="password">
-            
+            <span class="eye-icon">
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-eye-slash"></i>
+            </span>
+
         </div>
     </div>
 </body>
+
 </html>
