--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 <body>
     <div class="container">
         <div class="input-box">
-            <input type="password" name="password" placeholder="password">
+            <input type="password" name="password" id="pass-input" placeholder="password">
             <span class="eye-icon">
                 <i class="fa-solid fa-eye"></i>
-                <i class="fa-solid fa-eye-slash"></i>
+                <i class="fa-solid fa-eye-slash active"></i>
             </span>
 
         </div>
     </div>
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
