--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="password" name="password" id="pass-input" placeholder="password">
             <span class="eye-icon">
                 <i class="fa-solid fa-eye"></i>
-                <i class="fa-solid fa-eye-slash active"></i>
+                <i class="fa-solid fa-eye-slash"></i>
             </span>
 
         </div>
